# ECE661

./: README.md
HW01/: README.md
HW02/: ECE661_HW2_Test.xlsx  README.md  TaskD.py  homography.py  taskA.py  taskA_test.py  taskB.py  taskC.py
HW03/: 1step.py  2step.py  README.md  p2p.py  transformImage.py  twoStep.py
HW04/: README.md  harris.py  run_harris.sh  sift.py
HW04/SuperGluePretrainedNetwork/: ece661_instructions.txt  run_ece661.sh  superglue_ece661.py
HW05/: panorama.ipynb  panorama.py  panorama_helper.py
HW06/: otsu.ipynb  otsu.py  otsu_helper.py
HW07/: AdaIN_style_classifier.ipynb  AdaIN_style_classifier.py  lbp_histogram.txt  lbp_style_classifier.ipynb  lbp_style_classifier.py  neural_style_classifier.ipynb  outputs.txt  style_classifier_helper.py  vgg19_style_classifier.ipynb  vgg19_style_classifier.py
HW08/: camera_callibration.ipynb  camera_callibration.py  camera_callibration_helper.py  text_dump.txt
HW09/: disparity.ipynb  image_rectification.ipynb  image_rectification_helper.py  manual_point_selector.py
HW09/LoopAndZhang/: CMakeLists.txt
HW09/LoopAndZhang/src/: main.cpp  util.cpp
HW09/test_rect/: features.py  main.py  rectification.py
HW10/: .weights.zip.icloud  adaBoost.py  adaBoost_helper.py  autoencoder.py  labels.npz  pca_lda_ae_helper.py  task1.ipynb  task3.ipynb  test.ipynb
HW10/weights/: model_16.pt  model_3.pt  model_8.pt
